# rwin

./: CMakeLists.txt  ReadMe.md  Taskfile.yml  conanfile.py
.github/workflows/: release.yaml
include/rwin/: DropCallbacks.h  IDropContext.h  IWindowManager.h  IdFactory.h  flags.h  macros.h  rwin.h  types.h
lib/rwin/: IWindowManager.cpp  IdFactory.cpp  rwin.cpp
lib/rwin/linux/: WaylandWindowManager.cpp  WaylandWindowManager.h  X11WindowManager.cpp  X11WindowManager.h  f.txt
lib/rwin/mac/: WindowsWindowManager.h
lib/rwin/windows/: WindowsWindowManager.cpp  WindowsWindowManager.h
test/: CMakeLists.txt  CMakePresets.json  main.cpp
